# PyUtils

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python310-lint-test.yml
app/myUtils/: __init__.py
app/myUtils/test/: test_debug.py
docs/: config.md  filesystem.md  immutable.md  logs.md  noInstantiable.md  validationClass.md
myPyUtils/src/: config.py  noInstantiable.py  validation.py
myPyUtils/test/: test_config.py  test_logs.py  test_noInstantiable.py  test_validation.py
myUtils/: __init__.py
myUtils/src/: Immutable.py  config.py  debug.py  logs.py  validation.py
myUtils/test/: test.validation.py  test_config.py  test_debug.py  test_noInstantiable.py
pyUtils/: __init__.py
pyUtils/src/: config.py  logs.py  no_instantiable.py  timing.py  validation.py
pyUtils/src/filesystem/: __init__.py  dirs.py  files.py
pyUtils/test/: test_config.py  test_logs.py  test_noInstantiable.py  test_timing.py  test_validation.py
pyUtils/test/test_filesystem/: test_dirs.py  test_files.py
