[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "jaimead7-pyutils"
    version = "0.1.3"
    description = "Different utilities for general purpose usage on python projects."
    authors = [
        {name = "Jaimead7", email = "alvarez.diaz.jaime1@gmail.com"},
    ]
    maintainers = [
        {name = "Jaimead7", email = "alvarez.diaz.jaime1@gmail.com"},
    ]
    readme = {file = "README.md", content-type = "text/markdown"}
    license = "MIT"
    license-files = [
        "LICENSE",
    ]
    keywords = [
        "utilities",
        "tools"
    ]
    classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
    requires-python = ">=3.10"
    dependencies = [
        "tomli >= 2.2.1",
        "tomli-w >= 1.2.0",
        "pyyaml >= 6.0.2",
        "typing_extensions >= 4.14.1"
    ]
    [project.optional-dependencies]
        dev = [
            "pytest>=8.3.4",
            "wheel>=0.45.1",
            "twine>=6.1.0",
            "build>=1.3.0"
        ]
    [project.urls]
        Homepage = "https://github.com/Jaimead7/PyUtils"
        Repository = "https://github.com/Jaimead7/PyUtils"

[tool]
    [tool.setuptools]
        [tool.setuptools.packages]
        find = {}
    [tool.pytest.ini_options]
        python_files = "test_*.py"
        addopts = "--verbose"